# python-bootcamp

./: README.md
basics/: built_in_functions.py  conditionals.py  data_types.py  operators.py  repetitions.py  strings.py  variables.py
data_structures/: 01_a_list_methods.py  01_lists.py  02_tuples.py  03_sets.py  04_dicts.py  05_functions.py
labs/: banking1.py  banking2.py  banking_oop.py
oop/: 00_intro.py  010_decorators2.py  011_iterators.py  012_generators.py  013_datetime.py  014_datetime_ops.py  01_poo_bike_factory.py  02_constructors.py  03_inheritance_simple.py  04_inheritance_multiple.py  05_composition.py  06_encapsulation.py  07_polymorphism.py  08_interface_abs_class.py  09_decorators.py  cha_banking1.py  cha_banking2_dates.py
poo/: 00_poo_intro.py  01_poo_bike_factory.py  01_poo_intro.py  03_inheritance.py  03_inheritance_simple.py  04_composition.py  04_inheritance_multiple.py  06_encapsulation.py  07_polymorphism.py  08_interface_abs_class.py
tdd_project/: Makefile  README.md  docker-compose.yml  pyproject.toml
todo_project/: Makefile  pyproject.toml
todo_project/todo_project/: main.py  routers.py
todo_project/todo_project/controllers/: todo.py
todo_project/todo_project/core/: config.py
todo_project/todo_project/db/: mongo.py
todo_project/todo_project/models/: base.py  subtodo.py  todo.py
todo_project/todo_project/schemas/: base.py  subtodo.py  todo.py
todo_project/todo_project/usecases/: todo.py
using_files/: 00_files.py  01_managing_files.py  02_best_practices.py  03_working_with_csv.py  cha_banking_logger.py  example.csv  (+3 more)
(+59 files in other folders)
